--- a/web-frontend/public/index.css
+++ b/web-frontend/public/index.css
@@ -1,4 +1,28 @@
 /* Add CSS styles here! */
+html {
+  font-family: Rubik, Roboto, sans-serif;
+  font-size: 10px;
+}
 body {
-  font-family: sans-serif;
+  font-family: Rubik;
+  font-weight: 400;
+  margin: 0;
+  box-sizing: border-box;
+}
+:root {
+  /* Color styles */
+  --pos-green: rgba(83, 206, 132, 1);
+  --neg-red: rgba(255, 95, 95, 1);
+  --white: rgba(255, 255, 255, 1);
+  --light-white: rgba(248, 248, 248, 1);
+  --black: rgba(0, 0, 0, 1);
+  --primary-black: rgba(68, 68, 68, 1);
+  --primary-accent: rgba(241, 145, 0, 1);
+  --secondary-accent: rgba(73, 135, 255, 1);
+  --light-grey: rgba(189, 189, 189, 1);
+  --grey: rgba(146, 146, 146, 1);
+  --primary-border-grey: rgba(159, 159, 159, 1);
+
+  /* Effect styles */
+  --primary-box-shadow: 22px 0px 4px rgba(0, 0, 0, 0.12);
 }
