--- a/web-frontend/src/components/graphs/graphs.css
+++ b/web-frontend/src/components/graphs/graphs.css
@@ -1,22 +1,71 @@
+/* CircularProgress */
 .progress {
   transform: rotate(-90deg);
   transform-origin: 50% 50%;
   transition: 0.35s stroke-dashoffset;
-  /* animation: dash 3s ease; */
-  /* animation-iteration-count: initial; */
-  /* animation-fill-mode: forwards; */
 }
-.progress_background {
+.progress-background {
   transform: rotate(102deg);
   transform-origin: 50% 50%;
   transition: 0.35s stroke-dashoffset;
 }
-.progress_perc {
+.progress-perc {
   font-size: 14px;
-  fill: red;
 }
-@keyframes dash {
-  to {
-    stroke-dashoffset: 0;
-  }
+
+/* ProgressBar */
+.progress-bar-container > * {
+  font-weight: 400;
+}
+.progress-bar-container {
+  width: 100%;
+  height: 100px;
+  display: flex;
+}
+.right {
+  position: relative;
+  width: 50%;
+  height: 100%;
+}
+.left {
+  position: relative;
+  width: 50%;
+  height: 100%;
+}
+.active {
+  position: absolute;
+  right: 0;
+  top: -0.5px;
+  height: calc(100% + 1px);
+  width: 30%;
+  border-radius: 5px;
+}
+.right-active {
+  left: 0;
+  border-top-left-radius: 0px !important;
+  border-bottom-left-radius: 0px !important;
+}
+.left-active {
+  right: 0;
+  border-top-right-radius: 0px !important;
+  border-bottom-right-radius: 0px !important;
+}
+.bar {
+  position: relative;
+  display: flex;
+  width: 100%;
+  /* height: 16px; */
+  background: var(--light-white);
+  border-width: 0.5px;
+  border-style: solid;
+  border-color: var(--primary-border-grey);
+}
+.bar-divider {
+  position: absolute;
+  /* height: 36px; */
+  width: 1px;
+  background: var(--primary-border-grey);
+  left: calc(50% - 0.5px);
+  top: -10px;
+  z-index: 1;
 }
