--- a/web-frontend/src/App.css
+++ b/web-frontend/src/App.css
@@ -2,8 +2,14 @@
 .-display-none {
   display: none;
 }
-.-display-flex {
+.-flex {
   display: flex;
+}
+.-flex-right {
+  margin-left: auto;
+}
+.-hidden {
+  visibility: hidden;
 }
 /* styles */
 
