--- a/web-frontend/src/components/graphs/graphs.css
+++ b/web-frontend/src/components/graphs/graphs.css
@@ -56,6 +56,7 @@
   left: 0;
   border-top-left-radius: 0px !important;
   border-bottom-left-radius: 0px !important;
+  animation: load 0.5s ease;
 }
 .left-active {
   right: 0;
@@ -72,8 +73,11 @@
   top: -10px;
   z-index: 1;
 }
+.label-wrapper {
+  margin-bottom: 2px;
+}
 .label {
-  position: relative;
+  /* position: relative; */
   font-size: 1.6rem;
   font-weight: 900;
   top: -28px;
