primary button added

--- a/web-frontend/public/index.css
+++ b/web-frontend/public/index.css
@@ -18,6 +18,8 @@ body {
   --black: rgba(0, 0, 0, 1);
   --primary-black: rgba(68, 68, 68, 1);
   --primary-accent: rgba(241, 145, 0, 1);
+  --primary-accent-light: rgba(255, 169, 38, 1);
+  --primary-accent-dark: rgba(241, 145, 0, 1);
   --secondary-accent: rgba(73, 135, 255, 1);
   --light-grey: rgba(189, 189, 189, 1);
   --grey: rgba(146, 146, 146, 1);
