--- a/web-frontend/src/App.css
+++ b/web-frontend/src/App.css
@@ -47,9 +47,17 @@ h6 {
   color: var(--primary-black);
 }
 /* Texts */
+h1.heading1 {
+  font-weight: 600;
+  font-size: 2.8rem;
+}
 h2.heading2 {
-  font-weight: 400;
+  font-weight: 600;
   font-size: 2.4rem;
+}
+h3.heading3 {
+  font-weight: 600;
+  font-size: 2rem;
 }
 h4.heading4 {
   font-weight: 400;
