--- a/web-frontend/src/components/text/text.css
+++ b/web-frontend/src/components/text/text.css
@@ -1,6 +1,7 @@
 h1.fancy-heading {
   font-size: 3.4rem;
   font-weight: 500;
+  margin-bottom: 2px;
   color: var(--primary-black);
 }
 .fancy-heading-decorator {
