feature type selection menu added

--- a/web-frontend/public/index.css
+++ b/web-frontend/public/index.css
@@ -17,8 +17,9 @@ body {
   --light-white: rgba(248, 248, 248, 1);
   --black: rgba(0, 0, 0, 1);
   --primary-black: rgba(68, 68, 68, 1);
+  --secondary-black: rgba(88, 88, 88, 1);
   --primary-accent: rgba(241, 145, 0, 1);
-  --primary-accent-light: rgba(255, 169, 38, 1);
+  --primary-accent-light: rgba(255, 160, 38, 1);
   --primary-accent-dark: rgba(241, 145, 0, 1);
   --secondary-accent: rgba(73, 135, 255, 1);
   --light-grey: rgba(189, 189, 189, 1);
