--- a/web-frontend/src/App.css
+++ b/web-frontend/src/App.css
@@ -336,6 +336,7 @@ select.phone-selector {
   padding-left: 15px;
   padding-top: 0px;
   padding-bottom: 0px;
+  border-radius: 4px;
 }
 /* Defaults */
 .App {
