--- a/web-frontend/public/index.css
+++ b/web-frontend/public/index.css
@@ -8,16 +8,18 @@ body {
   font-weight: 400;
   margin: 0;
   box-sizing: border-box;
+  background-color: var(--background);
 }
 :root {
   /* Color styles */
+  --background: rgba(255, 255, 255);
   --pos-green: rgba(83, 206, 132, 1);
   --neg-red: rgba(255, 95, 95, 1);
   --white: rgba(255, 255, 255, 1);
   --light-white: rgba(248, 248, 248, 1);
   --black: rgba(0, 0, 0, 1);
   --primary-black: rgba(68, 68, 68, 1);
-  --secondary-black: rgba(88, 88, 88, 1);
+  --secondary-black: rgba(68, 68, 68, 1);
   --primary-accent: rgba(241, 145, 0, 1);
   --primary-accent-light: rgba(255, 160, 38, 1);
   --primary-accent-dark: rgba(241, 145, 0, 1);
@@ -32,4 +34,33 @@ body {
 
   /* gaps */
   --gap-medium: 25px;
+
+  /* dark-mode exceptions */
+  --tag: rgba(255, 255, 255, 1);
+  --analytics-card: rgba(255, 255, 255, 1);
+
 }
+:root[data-theme='dark'] {
+  /*tested*/
+  --background: #141516;
+  --pos-green: rgba(83, 206, 132, 1);
+  --neg-red: rgba(255, 95, 95, 1);
+  --white: rgba(25, 25, 25, 1);
+  --light-white: rgb(34 36 40);
+  --black: rgba(250, 250, 250, 1);
+  --primary-black: rgb(236 236 236);
+  --secondary-black: rgba(190, 190, 190, 1);
+  --primary-accent: rgb(206 129 15);
+  --primary-accent-light: rgb(159 96 2);
+  --primary-accent-dark: rgba(241, 145, 0, 1);
+  --secondary-accent: rgba(38, 132, 255, 1);
+  --light-grey: rgba(69, 69, 69, 1);
+  --grey: rgb(198 198 198);
+  --primary-border-grey: rgba(89, 89, 89, 1);
+  /* dark-mode exceptions */
+  --tag: rgb(25 52 87);
+  --analytics-card:rgb(34 36 40);
+
+
+  --primary-box-shadow: 22px 0px 4px rgba(0, 0, 0, 0.12);
+  --primary-border: 1px solid var(--primary-border-grey);
