--- a/web-frontend/src/App.css
+++ b/web-frontend/src/App.css
@@ -1,7 +1,7 @@
 /* util classes */
 /* Margin Bottom */
 .-mr-5 {
-  margin-bottom: 5px;
+  margin-right: 5px;
 }
 .-mb-5 {
   margin-bottom: 5px;
@@ -130,6 +130,7 @@
 div.card {
   border: 1px solid var(--primary-border-grey);
   border-radius: 6px;
+  background-color: var(--analytics-card);
 }
 h1,
 h2,
@@ -209,7 +210,7 @@ h6 {
   position: relative;
 }
 .icon-medium {
-  width: 40px !important;
+  width: 38px !important;
   top: -1px;
 }
 /* .icon-scale-fingerprint { */
@@ -238,7 +239,7 @@ select.select {
   border: 1px solid var(--light-grey);
   background: var(--light-white);
   border-radius: 2px;
-  color: var(--primary-black);
+  color: var(--secondary-black);
 }
 select.select:hover {
   outline: 0;
@@ -395,12 +396,13 @@ button.icon-button {
 .keyword-tag {
   font-size: 1.8rem;
   font-weight: 400;
+  color: var(--primary-black);
   padding: 8px 20px;
   border: 1px solid var(--secondary-accent);
   border-radius: 50px;
   margin-left: 4px;
   margin-right: 4px;
-  background-color: var(--white);
+  background-color: var(--tag);
 }
 
 /* specifics */
