feature type selection menu improved

--- a/web-frontend/src/App.css
+++ b/web-frontend/src/App.css
@@ -416,14 +416,12 @@ select.phone-selector {
   border-radius: 4px;
 }
 /* feature type selection menu */
-.feature-types-selection-menu .feature-type-heading {
-  margin-right: 22rem;
-}
+/* .feature-types-selection-menu .feature-type-heading { */
+/* margin-right: 22rem; */
+/* } */
 @media only screen and (max-width: 750px) {
   .feature-types-selection-menu .feature-type-heading {
-    margin-right: 4rem;
-  }
-  .feature-types-selection-menu .feature-type-heading {
+    /* margin-right: 4rem; */
     font-size: 2rem;
   }
   .feature-types-selection-menu select.large {
@@ -435,9 +433,7 @@ select.phone-selector {
 }
 @media only screen and (max-width: 500px) {
   .feature-types-selection-menu .feature-type-heading {
-    margin-right: 1rem;
-  }
-  .feature-types-selection-menu .feature-type-heading {
+    /* margin-right: 1rem; */
     font-size: 1.8rem;
   }
   .feature-types-selection-menu select.large {
