--- a/web-frontend/public/index.css
+++ b/web-frontend/public/index.css
@@ -64,3 +64,9 @@ body {
 
   --primary-box-shadow: 22px 0px 4px rgba(0, 0, 0, 0.12);
   --primary-border: 1px solid var(--primary-border-grey);
+@media only screen and (max-width: 720px) {
+	html {
+		font-size: 2px;
+	}
+}
+
