--- a/web-frontend/src/components/graphs/graphs.css
+++ b/web-frontend/src/components/graphs/graphs.css
@@ -99,3 +99,57 @@
     width: 1;
   }
 }
+
+/*Bargraph - frequency districution*/
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.5);
+  transition: 0.3s;
+  width: 210%;
+  height: 400px;
+  border-radius: 5px;
+  top: 50px;
+  left: 80%;
+  cursor: pointer;
+  display: inline-block;
+  padding-left: 150px;
+  position: absolute;
+
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+  .topic-frequency-distribution-bargraph{
+    text-align: center;
+    margin-left: -19px;
+    position: fixed;
+  }
+
+  .main-container {    
+    background-size: 100% 100%;
+    margin: 0%;
+    padding: 0%;
+  }
+
+  .body{   
+    top: 0%;
+    left: 1%;
+    display:block; 
+    width: 98%;
+    margin: 0%;
+    height: 75%;
+   
+  }
+  .body-left-split{
+    display:inline-block;
+    top: 24%;
+    left: 1%;
+    float: left;
+    height: 100%;
+    width: 15%;
+    margin-right: 1%;
+    position: fixed;
+  
+  }
