--- a/web-frontend/src/components/header/frequency-based-ui_header.css
+++ b/web-frontend/src/components/header/frequency-based-ui_header.css
@@ -1,4 +1,4 @@
-/*Frequency based UI Header*/
+/*Frequency based UI header*/
 .main-container {    
     background-size: 100% 100%;
     margin: 0%;
@@ -17,6 +17,7 @@
 
   .header-right-split{
     float: right;
+
   }
 
   .navElements{
