--- a/web-frontend/src/components/graphs/graphs.css
+++ b/web-frontend/src/components/graphs/graphs.css
@@ -102,30 +102,33 @@
 
 /*Bargraph - frequency districution*/
 
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.5);
+
+.card-left {
+  box-shadow: 0 4px 8px 0 var(--primary-black);
   transition: 0.3s;
-  width: 210%;
-  height: 400px;
+  width: 290%;
+  height: 410px;
   border-radius: 5px;
   top: 50px;
-  left: 80%;
+  left: 30%;
   cursor: pointer;
-  display: inline-block;
   padding-left: 150px;
   position: absolute;
 
 }
 
-.card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+.card-left:hover {
+  box-shadow: 0 8px 16px 0 var(--primary-black);
 }
 
-  .topic-frequency-distribution-bargraph{
-    text-align: center;
-    margin-left: -19px;
-    position: fixed;
-  }
+
+.topic-frequency-distribution-bargraph{
+  text-align: center;
+  margin-left: 70px;
+  position: fixed;
+  font-size: 1.5rem;
+
+}
 
   .main-container {    
     background-size: 100% 100%;
@@ -153,3 +156,225 @@
     position: fixed;
   
   }
+
+  
+  /*BAR GRAPH*/
+
+  .frequency_percentage{
+    float: left;
+    animation: fadein 3s linear;
+    bottom: -35px;
+    position: absolute;
+    font-size: 1.5rem;
+    left: 1px;
+    font-weight: bold;
+  }
+
+  .bar {
+    height: 220px;
+    left: -550px;
+    top: 180px;
+    position: absolute;
+    background-color:var(--primary-white);
+    border-color: white;
+    z-index: -1;
+}
+
+.barHighlight_1{
+  height: 100%;;
+  width: 30px;
+  background-color: #D9F0F3;
+  position: absolute;
+  right: -10px;
+  bottom: 20%;
+}
+
+.progress-percentage_1 {
+  width: 30px;
+  animation:start-load 2s ease forwards;
+  position: absolute;
+  right: 0px;
+  bottom: 0%;
+}
+
+
+.barHighlight_2{
+  height: 100%;;
+  width: 30px;
+  background-color: #D9F0F3;
+  position: absolute;
+  right: -80px;
+  bottom: 20%;
+}
+
+.progress-percentage_2 {
+  width: 30px;
+  position: absolute;
+  right:0px;
+  height: 100%;
+  animation:start-load 2s ease forwards;
+  bottom: 0%;
+}
+
+
+.barHighlight_3{
+  height: 100%;;
+  width: 30px;
+  background-color: #D9F0F3;
+  position: absolute;
+  right: -150px;
+  bottom: 20%;
+}
+
+.progress-percentage_3 {
+  width: 30px;
+  position: absolute;
+  right: 0px;
+  margin-top: -30px;
+  height: 100%;
+  animation:start-load 2s ease forwards;
+  bottom: 0%;
+}
+
+.barHighlight_4{
+  height: 100%;;
+  width: 30px;
+  background-color: #D9F0F3;
+  position: absolute;
+  right: -220px;
+  bottom: 20%;
+}
+
+.progress-percentage_4 {
+  width: 30px;
+  position: absolute;
+  right: -0px;
+  margin-top: -30px;
+  height: 100%;
+  animation:start-load 2s ease forwards;
+  bottom: 0%;
+}
+
+.barHighlight_5{
+  height: 100%;;
+  width: 30px;
+  background-color: #D9F0F3;
+  position: absolute;
+  right: -290px;
+  bottom: 20%;
+}
+
+.progress-percentage_5 {
+  width: 30px;
+  position: absolute;
+  right: 0x;
+  margin-top: -30px;
+  height: 100%;
+  animation:start-load 2s ease forwards;
+  bottom: 0%;
+}
+
+.barHighlight_6{
+  height: 100%;;
+  width: 30px;
+  background-color: #D9F0F3;
+  position: absolute;
+  right: -360px;
+  bottom: 20%;
+}
+
+.progress-percentage_6 {
+  width: 30px;
+  position: absolute;
+  right: 0px;
+  height: 100%;
+  animation:start-load 2s ease forwards;
+  bottom: 0%;
+}
+
+.barHighlight_7{
+  height: 100%;;
+  width: 30px;
+  background-color: #D9F0F3;
+  position: absolute;
+  right: -430px;
+  bottom: 20%;
+}
+
+.progress-percentage_7 {
+  width: 30px;
+  position: absolute;
+  right: 0px;
+  height: 100%;
+  animation:start-load 2s ease forwards;
+  bottom: 0%;
+}
+
+.barHighlight_8{
+  height: 100%;;
+  width: 30px;
+  background-color: #D9F0F3;
+  position: absolute;
+  right: -500px;
+  bottom: 20%;
+}
+
+.progress-percentage_8 {
+  width: 30px;
+  position: absolute;
+  right: 0px;
+  height: 100%;
+  animation:start-load 2s ease forwards;
+  bottom: 0%;
+}
+
+.barHighlight_9{
+  height: 100%;;
+  width: 30px;
+  background-color: #D9F0F3;
+  position: absolute;
+  right: -570px;
+  bottom: 20%;
+}
+
+.progress-percentage_9 {
+  width: 30px;
+  position: absolute;
+  right: 0px;
+  height: 100%;
+  animation:start-load 2s ease forwards;
+  bottom: 0%;
+}
+
+@keyframes start-load {
+    from {
+        height: 0;
+    }
+    to {
+        height: 1;
+    }
+}
+
+@keyframes fadein {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 100;
+  } 
+} 
+
+.barchartKeyword{
+  writing-mode: tb-rl;
+  transform: rotate(-180deg);
+  float: left;
+  transition: 0.5s; 
+  font-family: Arial, Helvetica, sans-serif; 
+  position: absolute;
+  left: 2px;
+  bottom: 20px;
+  width: 100%;
+  z-index: 1;
+  color: #37474F;
+ font-size: 17px;
+}
