--- a/web-frontend/src/pages/exkey/exkey.css
+++ b/web-frontend/src/pages/exkey/exkey.css
@@ -248,15 +248,16 @@ table{
     position: absolute;
   }
 
-  /*nnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnn*/
-  .container {
+ 
+  /*loading spinner right*/
+  .container_right {
     width: 100%;
     position: relative;
     display: flex;
     justify-content: space-around;
     top:100px
   }
-  .container .spinner {
+  .container_right .spinner_right {
       width: 180px;
       height: 180px;
       border-radius: 50%;
@@ -265,238 +266,42 @@ table{
       border-right-color: #F00;
       animation: rotateSpinner 1.5s linear 54;
   }
-  .counter {
+  .counter_right {
     position: absolute;
     top: 170px;
     left: 50%;
     transform: translateX(-50%);
     font-size: 26px;
   }
+
+    /*loading spinner left*/
+    .container_left {
+      width: 100%;
+      position: relative;
+      display: flex;
+      justify-content: space-around;
+      top:100px;
+      left:-60px;
+    }
+    .container_left .spinner_left {
+        width: 180px;
+        height: 180px;
+        border-radius: 50%;
+        border: 8px solid rgba(152, 150, 150, 0.2);
+        border-left-color: #F00;
+        border-right-color: #F00;
+        animation: rotateSpinner 1.5s linear 54;
+    }
+    .counter_left {
+      position: absolute;
+      top: 170px;
+      left: 52%;
+      transform: translateX(-50%);
+      font-size: 26px;
+    }
+
   @keyframes rotateSpinner {
       0% { transform: rotate(0deg); }
       100% { transform: rotate(360deg); }
   }
   
-  
-
-  /*BAR GRAPH*/
-
-  .frequency_percentage{
-    float: left;
-    animation: fadein 3s linear;
-    bottom: -35px;
-    position: absolute;
-    font-size: 1.5rem;
-    left: 1px;
-    font-weight: bold;
-  }
-
-  .bar {
-    height: 220px;
-    left: -550px;
-    top: 180px;
-    position: absolute;
-    background-color:var(--primary-white);
-    border-color: white;
-    z-index: -1;
-}
-
-.barHighlight_1{
-  height: 100%;;
-  width: 30px;
-  background-color: #D9F0F3;
-  position: absolute;
-  right: -10px;
-  bottom: 20%;
-}
-
-.progress-percentage_1 {
-  width: 30px;
-  animation:start-load 2s ease forwards;
-  position: absolute;
-  right: 0px;
-  bottom: 0%;
-}
-
-
-.barHighlight_2{
-  height: 100%;;
-  width: 30px;
-  background-color: #D9F0F3;
-  position: absolute;
-  right: -80px;
-  bottom: 20%;
-}
-
-.progress-percentage_2 {
-  width: 30px;
-  position: absolute;
-  right:0px;
-  height: 100%;
-  animation:start-load 2s ease forwards;
-  bottom: 0%;
-}
-
-
-.barHighlight_3{
-  height: 100%;;
-  width: 30px;
-  background-color: #D9F0F3;
-  position: absolute;
-  right: -150px;
-  bottom: 20%;
-}
-
-.progress-percentage_3 {
-  width: 30px;
-  position: absolute;
-  right: 0px;
-  margin-top: -30px;
-  height: 100%;
-  animation:start-load 2s ease forwards;
-  bottom: 0%;
-}
-
-.barHighlight_4{
-  height: 100%;;
-  width: 30px;
-  background-color: #D9F0F3;
-  position: absolute;
-  right: -220px;
-  bottom: 20%;
-}
-
-.progress-percentage_4 {
-  width: 30px;
-  position: absolute;
-  right: -0px;
-  margin-top: -30px;
-  height: 100%;
-  animation:start-load 2s ease forwards;
-  bottom: 0%;
-}
-
-.barHighlight_5{
-  height: 100%;;
-  width: 30px;
-  background-color: #D9F0F3;
-  position: absolute;
-  right: -290px;
-  bottom: 20%;
-}
-
-.progress-percentage_5 {
-  width: 30px;
-  position: absolute;
-  right: 0x;
-  margin-top: -30px;
-  height: 100%;
-  animation:start-load 2s ease forwards;
-  bottom: 0%;
-}
-
-.barHighlight_6{
-  height: 100%;;
-  width: 30px;
-  background-color: #D9F0F3;
-  position: absolute;
-  right: -360px;
-  bottom: 20%;
-}
-
-.progress-percentage_6 {
-  width: 30px;
-  position: absolute;
-  right: 0px;
-  height: 100%;
-  animation:start-load 2s ease forwards;
-  bottom: 0%;
-}
-
-.barHighlight_7{
-  height: 100%;;
-  width: 30px;
-  background-color: #D9F0F3;
-  position: absolute;
-  right: -430px;
-  bottom: 20%;
-}
-
-.progress-percentage_7 {
-  width: 30px;
-  position: absolute;
-  right: 0px;
-  height: 100%;
-  animation:start-load 2s ease forwards;
-  bottom: 0%;
-}
-
-.barHighlight_8{
-  height: 100%;;
-  width: 30px;
-  background-color: #D9F0F3;
-  position: absolute;
-  right: -500px;
-  bottom: 20%;
-}
-
-.progress-percentage_8 {
-  width: 30px;
-  position: absolute;
-  right: 0px;
-  height: 100%;
-  animation:start-load 2s ease forwards;
-  bottom: 0%;
-}
-
-.barHighlight_9{
-  height: 100%;;
-  width: 30px;
-  background-color: #D9F0F3;
-  position: absolute;
-  right: -570px;
-  bottom: 20%;
-}
-
-.progress-percentage_9 {
-  width: 30px;
-  position: absolute;
-  right: 0px;
-  height: 100%;
-  animation:start-load 2s ease forwards;
-  bottom: 0%;
-}
-
-@keyframes start-load {
-    from {
-        height: 0;
-    }
-    to {
-        height: 1;
-    }
-}
-
-@keyframes fadein {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 100;
-  } 
-} 
-
-.barchartKeyword{
-  writing-mode: tb-rl;
-  transform: rotate(-180deg);
-  float: left;
-  transition: 0.5s; 
-  font-family: Arial, Helvetica, sans-serif; 
-  position: absolute;
-  left: 2px;
-  bottom: 20px;
-  width: 100%;
-  z-index: 1;
-  color: #37474F;
- font-size: 17px;
-}
-
