--- a/web-frontend/src/pages/exkey/exkey.css
+++ b/web-frontend/src/pages/exkey/exkey.css
@@ -43,24 +43,19 @@
   box-shadow: 0 8px 16px 0 var(--primary-black);
 }
 
-.bubble-chart {
-  margin-left: -170px;
-  bottom: -170px;
+.word-cloud {
+  margin-left: -180px;
   animation-duration: 2s;
   animation-name: trend_animation;
   width: 1100px;
+  margin-top: -20px;
 }
 
 @keyframes trend_animation {
-  0% {
-    transform: scale(0.1);
-    opacity: 0;
+  from {
+    transform: scale(0);
   }
-  60% {
-    transform: scale(1.2);
-    opacity: 1;
-  }
-  100% {
+  to {
     transform: scale(1);
   }
 }
@@ -70,6 +65,8 @@
   margin-left: 150px;
   position: fixed;
   font-size: 1.5rem;
+  color: var(--black);
+  font-weight: bold;
 }
 
 .keywords-topic {
@@ -77,6 +74,8 @@
   margin-left: 120px;
   position: fixed;
   font-size: 1.5rem;
+  color: var(--black);
+  font-weight: bold;
 }
 
 .main-container {
@@ -180,7 +179,7 @@
   position: relative;
   display: flex;
   justify-content: space-around;
-  top: -290px;
+  top: 110px;
   left: -80px;
 }
 .container_right .spinner_right {
@@ -275,7 +274,7 @@
   bottom: 0px;
 }
 
-.animation {
+.barchart_animation {
   animation: start_load 2s ease forwards;
 }
 
